# Rexit

./: .gitignore  Cargo.toml  README.md  getBearerToken.md  justfile  log4rs.yaml
.github/: codecov.yml
.github/workflows/: Ubuntu-latest.yml  audit.yml  cd.yml  ci.yml  combine-prs.yml  release.yml
firedbg/: target.json
src/: cli.rs  export.rs  id_translation.rs  image_log.rs  images.rs  lib.rs  login.rs  macros.rs  main.rs  messages.rs
src/ReAPI/: images.rs  login.rs  messages.rs  mod.rs  rooms.rs  saved_posts.rs  subreddit.rs  users.rs
src/sb/: mod.rs  sb_login.rs  sb_rooms.rs
tests/: tests.rs
