[package]
name = "rexit"
version = "1.0.1"
edition = "2021"
description = "Export your Reddit Chats"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
cached = "0.43.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
console = { version = "0.15.5", features = ["windows-console-colors"] }
inquire = "0.6.1"
log = "0.4.0"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
reqwest = {version = "0.11.16", features = ["blocking", "multipart", "cookies", "gzip"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
url = "2.3.1"
urlencoding = "2.1.2"
