[package]
name = "rexit"
version = "1.0.1"
edition = "2021"
description = "Export your Reddit Chats"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
cached = "0.43.*"
chrono = { version = "0.4.*", features = ["serde"] }
clap = { version = "4.2.*", features = ["derive"] }
console = { version = "0.15.*", features = ["windows-console-colors"] }
inquire = "0.6.*"
log = "0.4.*"
pretty_env_logger = "0.4.*"
regex = "1.7.3"
reqwest = {version = "0.11.*", features = ["blocking", "multipart", "cookies", "gzip"]}
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.*"
urlencoding = "2.1.*"
